--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ body#page-question-type-ddmatch div[id^=fitem_id_][id*=subanswers_] {
 .qtext{margin-bottom:0;}
 .qtext p{margin:0;}
 .qtext p br{display:none;}
-.jsenabled .visibleifjs{display:inline-block !important; margin-bottom:10px;}
+.divanswer .answer .visibleifjs{display:inline-block !important; margin-bottom:5px;}
 @media screen and (max-width: 768px) {
 .ddmatch li p{font-size:12px;}
 .ddmatch .matchorigin li{font-size:12px;}
