amd, style.css, redme, file clean up

--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,23 @@
 }
 
 .ddmatch li {
-    margin: 6px;
-    padding: 4px;
+    margin: 0.375rem;
+    padding: 0.25rem;
 }
 
 .ddmatch li.draghome {
     background-color: white;
-    border: 1px solid #908b8b;
-    padding: 10px;
-    font-size: 15px;
+    border: 0.06rem solid #908b8b;
+    padding: 0.625rem;
+    font-size: 0.938rem;
     color: #333;
-    line-height:20px;
+    line-height:1.25rem;
     cursor: move;
 }
 
 .que.ddmatch .draghome.beingdragged {
     z-index: 3;
-    box-shadow: 3px 3px 4px #000;
+    box-shadow: 0.188rem 0.188rem 0.25rem #000;
     position: absolute;
     width: 35%;
 
@@ -35,7 +35,9 @@
 }
 
 .que.ddmatch .draghome.placed {
-    margin-bottom: 2px;
+    margin: 0;
+    margin-right: -0.313rem;
+    margin-bottom: 0.125rem;
     list-style: none;
 }
 
@@ -44,25 +46,25 @@
 .que.ddmatch .draghome.placed:focus:not(.beingdragged),
 .que.ddmatch .draghome.placed.valid-drag-over-drop {
     border-color: #0a0;
-    box-shadow: 0 0 5px 5px rgba(255, 255, 150, 1);
+    box-shadow: 0 0 0.313rem 0.313rem rgba(255, 255, 150, 1);
 }
 
 .ddmatch tr {
     word-break: break-all;
 }
 .ddmatch li.placeholder {
-    border: 1px dotted black;
+    border: 0.06rem dotted black;
     text-align: center;
 }
 
 .ddmatch ul.draggrouphomes1 {
-    border: 1px solid gray;
+    border: 0.06rem solid gray;
     float: right;
     list-style: none;
     margin: 0;
-    padding: 4px;
+    padding: 0.25rem;
     width: 35%;
-    max-height:380px;
+    max-height:23.75rem;
 }
 
 .ddmatch .draggrouphomes1 li {
@@ -74,9 +76,10 @@
 }
 .que.ddmatch .drop.active {
     display: inline-block;
+    width: 100%;
     text-align: center;
-    border: 1px solid #000;
-    margin-bottom: 2px;
+    border: 0.06rem solid #000;
+    margin-bottom: 0.125rem;
 }
 
 
@@ -92,12 +95,12 @@
 }
 
 .ddmatch ul.drop {
-    border: 1px solid gray;
+    border: 0.06rem solid gray;
     padding-left: 0rem;
 }
 .ddmatch .que .formulation{
     background:#f1f1f1 !Important;
-    padding:20px !Important;
+    padding:1.25rem !Important;
 }
 
 .ddmatch td.text {
@@ -106,8 +109,8 @@
 }
 .ddmatch td.control {
     width: 85%;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 0.938rem;
+    margin-right: 0.938rem;
 }
 
 .ddmatch table.answer {
@@ -117,15 +120,15 @@
 }
 
 .ddmatch .correctanswertable {
-    margin: 10px;
+    margin: 0.625rem;
 }
 
 .ddmatch .drop.yui3-dd-drop-active-valid {
-    border: 2px dotted red;
+    border: 0.125rem dotted red;
 }
 
 .ddmatch .drop.yui3-dd-drop-over {
-    border: 2px dotted green;
+    border: 0.125rem dotted green;
 }
 
 .ddmatch .drop .placeholder.hidden {
@@ -139,12 +142,12 @@
 /* Editing form. */
 body#page-question-type-ddmatch div[id^=fitem_id_][id*=subquestions_] {
     background: #EEE;
-    border: 1px solid #BBB;
+    border: 0.06rem solid #BBB;
     border-bottom: 0;
     margin-top: 0;
     margin-bottom: 0;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    padding-bottom: 0.313rem;
+    padding-top: 0.313rem;
 }
 
 body#page-question-type-ddmatch div[id^=fitem_id_][id*=subquestions_] .fitemtitle {
@@ -153,16 +156,16 @@ body#page-question-type-ddmatch div[id^=fitem_id_][id*=subquestions_] .fitemtitl
 
 body#page-question-type-ddmatch div[id^=fitem_id_][id*=subanswers_] {
     background: #EEE;
-    border: 1px solid #BBB;
+    border: 0.06rem solid #BBB;
     border-top: 0;
     margin-bottom: 2em;
     margin-top: 0;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    padding-bottom: 0.313rem;
+    padding-top: 0.313rem;
 }
 .ddmatch .divanswer {
-    max-height: 380px;
-    overflow-y:auto;
+    max-height: 23.75rem;
+    /* overflow-y:auto; */   /*----it is for scroll question table purpose----*/
     width: 60%;
     float: left;
 }
@@ -171,20 +174,20 @@ body#page-question-type-ddmatch div[id^=fitem_id_][id*=subanswers_] {
 .ddmatch .qtext p br{display:none;}
 .ddmatch .divanswer .answer .visibleifjs{display:inline-block !important; margin-bottom:5px;}
 .ddmatch p{
-    font-size: 15px !Important;
+    font-size: 0.938rem !Important;
     word-break: break-word;
-    line-height: 20px;
+    line-height: 1.25rem;
     color: #333;
 }
 .ddmatch .text {
-    font-size: 15px !Important;
+    font-size: 0.938rem !Important;
     word-break: break-word;
-    line-height: 20px;
+    line-height: 1.25rem;
     color: #333;
 }
 @media screen and (max-width: 768px) {
-.ddmatch li p{font-size:12px;}
-.ddmatch .draggrouphomes1 li{font-size:12px;}
+.ddmatch li p{font-size:0.75rem;}
+.ddmatch .draggrouphomes1 li{font-size:0.75rem;}
 .ddmatch td.control {
     width: 100%;
     margin-left: 0;
@@ -220,4 +223,5 @@ body#page-question-type-ddmatch div[id^=fitem_id_][id*=subanswers_] {
 .que.ddmatch .draghome.dragplaceholder.active {
     visibility: hidden;
     display: inline-block;
+    width: 100%;
 }
